update, add rÃesource

--- a/Tri-Wpf/App.xaml
+++ b/Tri-Wpf/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:Tri_Wpf"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Window.Resources.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
