--- a/Tri-Wpf/MainWindow.xaml
+++ b/Tri-Wpf/MainWindow.xaml
@@ -7,35 +7,6 @@
         mc:Ignorable="d"
         Title="下部工のユニット登録" Height="381" Width="975"
         FontSize="12">
-    <Window.Resources>
-        <Style TargetType="GroupBox">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="GroupBox">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="*" />
-                            </Grid.RowDefinitions>
-                            <Border Grid.Row="0"
-                                    BorderThickness="1" BorderBrush="White"
-                                    CornerRadius="0,0,0,0">
-                                <ContentPresenter
-                                    ContentSource="Header"
-                                    RecognizesAccessKey="True" />
-                            </Border>
-                            <Border Grid.Row="1" BorderBrush="White"
-                                    BorderThickness="1"
-                                    CornerRadius="0,0,0,0">
-                                <ContentPresenter Margin="4" />
-                            </Border>
-                        </Grid>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-    </Window.Resources>
-
     <Grid Background="#F0F0F0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -156,41 +127,11 @@
 
         </Grid>
 
-        <GroupBox Grid.Row="0" Grid.Column="1" Header="イメージ" Margin="10">
-            <GroupBox.Template>
-                <ControlTemplate TargetType="GroupBox">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
-                        <Border Grid.Row="0"
-                                BorderThickness="1,1,1,1"
-                                BorderBrush="Gray"
-                                CornerRadius="0"
-                                Padding="0,5,0,0">
-                        </Border>
-                        <Border Grid.Row="1">
-                            <ContentPresenter ContentSource="Header"
-                                              RecognizesAccessKey="True"
-                                              Margin="4,0,0,0" />
-                        </Border>
-                        <Border Grid.Row="2"
-                                BorderThickness="1,0,1,1"
-                                BorderBrush="Gray"
-                                CornerRadius="0"
-                                Padding="0,5,0,0">
-                            <ContentPresenter Margin="{TemplateBinding Padding}" />
-                        </Border>
-                    </Grid>
-                </ControlTemplate>
-            </GroupBox.Template>
-            <Grid Background="White" Margin="4">
-                <!-- Your image content here -->
+        <GroupBox Grid.Row="0" Grid.Column="1"  Header="イメージ" Style="{StaticResource AlternateGroupBoxStyle}" Margin="0 10 10 10">
+            <Grid Background="White" Margin="5">
+                 <Image Source="D:\code\Tri-Wpf\Image\image.png" Stretch="Uniform" />
             </Grid>
         </GroupBox>
-
 
         <!-- Bottom Buttons -->
         <StackPanel Grid.Row="1" Grid.Column="0"
