--- a/Tri-Wpf/MainWindow.xaml
+++ b/Tri-Wpf/MainWindow.xaml
@@ -16,6 +16,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <!-- Left Column - Main Content -->
@@ -37,13 +38,13 @@
 
                 <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
                     <TextBlock Text="ユニット名 : " FontSize="12" VerticalAlignment="Center" Margin="0,0,5,0" />
-                    <TextBox Width="175" Margin="0,0,10,0" />
+                    <TextBox Width="175" Margin="0,0,9,0" />
                     <Button Content="イメージ" Width="80" />
                 </StackPanel>
             </Grid>
 
             <!-- Tab Control -->
-            <TabControl Grid.Row="1" Margin="0,10,0,0">
+            <TabControl Grid.Row="1" Margin="0,9,0,0">
                 <TabItem Header="杭" Width="45" Margin="-4 0 0 0">
                     <Grid Margin="5">
                         <Grid.RowDefinitions>
