--- a/Tri-Wpf/MainWindow.xaml
+++ b/Tri-Wpf/MainWindow.xaml
@@ -15,16 +15,14 @@
 
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="50" />
         </Grid.RowDefinitions>
 
         <!-- Left Column - Main Content -->
-        <Grid Grid.Column="0" Margin="10">
+        <Grid Grid.Column="0" Margin="9 9 9 -9">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
-                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
             <!-- Header Section -->
@@ -44,7 +42,7 @@
             </Grid>
 
             <!-- Tab Control -->
-            <TabControl Grid.Row="1" Margin="0,9,0,0">
+            <TabControl Grid.Row="1" Margin="0,9,0,-2">
                 <TabItem Header="杭" Width="45" Margin="-4 0 0 0">
                     <Grid Margin="5">
                         <Grid.RowDefinitions>
@@ -66,6 +64,11 @@
                         <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" Margin="5">
                             <!-- <TextBlock Text="H300×300×10×15" Margin="5"/> -->
                             <ComboBox Width="130">
+                                <ComboBoxItem IsSelected="True">
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock>H300×300×10×15</TextBlock>
+                                    </StackPanel>
+                                </ComboBoxItem>
                                 <ComboBoxItem IsSelected="True">
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock>H300×300×10×15</TextBlock>
@@ -125,11 +128,10 @@
                     <TextBlock Text="敷桁内容" Margin="10" />
                 </TabItem>
             </TabControl>
-
         </Grid>
 
-        <GroupBox Grid.Row="0" Grid.Column="1"  Header="イメージ" Style="{StaticResource AlternateGroupBoxStyle}" Margin="0 10 10 10">
-            <Grid Background="White" Margin="5">
+        <GroupBox Grid.Row="0" Grid.Column="1"  Header="イメージ" Style="{StaticResource AlternateGroupBoxStyle}" Margin="0 9 9 -11">
+            <Grid Background="White" Margin="9">
                  <Image Source="D:\code\Tri-Wpf\Image\image.png" Stretch="Uniform" />
             </Grid>
         </GroupBox>
@@ -139,7 +141,7 @@
                     Orientation="Horizontal"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Bottom"
-                    Margin="10,10,10,10">
+                    Margin="9 0 9 9 ">
             <Button Content="計算書取込" Width="100" Margin="0,0,10,0" />
         </StackPanel>
 
