--- a/Tri-Wpf/App.xaml
+++ b/Tri-Wpf/App.xaml
@@ -6,7 +6,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Window.Resources.xaml" />
+                <ResourceDictionary Source="/Resources/Window.Resources.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
