--- a/Tri-Wpf/Views/MainWindow.xaml
+++ b/Tri-Wpf/Views/MainWindow.xaml
@@ -51,7 +51,7 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
-                            <RowDefinition Height="*" />
+                            <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
@@ -98,9 +98,28 @@
                                        HorizontalAlignment="Right" />
                         </StackPanel>
 
+                        <StackPanel Grid.Row="4" Grid.Column="0" VerticalAlignment="Center">
+                            <CheckBox Content="トッププレート" IsChecked="{Binding HasTopPlate}" />
+                        </StackPanel>
+                        <!-- <TextBlock Text="SL (mm)：" Grid.Row="4" Grid.Column="0" Margin="5" VerticalAlignment="Center" /> -->
+                        <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal" Margin="5">
+                            <ComboBox Width="130" Height="22">
+                                <ComboBoxItem IsSelected="True">
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock>PL-400×16×400</TextBlock>
+                                    </StackPanel>
+                                </ComboBoxItem>
+                                <ComboBoxItem>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock>PL-400×16×400</TextBlock>
+                                    </StackPanel>
+                                </ComboBoxItem>
+                            </ComboBox>
+                        </StackPanel>
+
                         <!-- Pile Direction -->
-                        <TextBlock Text="杭の向き：" Grid.Row="4" Grid.Column="0" Margin="5" VerticalAlignment="Center" />
-                        <StackPanel Grid.Row="4" Grid.Column="1" Margin="5" HorizontalAlignment="Left">
+                        <TextBlock Text="杭の向き：" Grid.Row="5" Grid.Column="0" Margin="5" VerticalAlignment="Center" />
+                        <StackPanel Grid.Row="5" Grid.Column="1" Margin="5" HorizontalAlignment="Left">
                             <ComboBox Width="130" Height="22">
                                 <ComboBoxItem IsSelected="True">
                                     <StackPanel Orientation="Horizontal">
@@ -151,7 +170,7 @@
                     VerticalAlignment="Bottom"
                     Margin="0,10,10,10">
             <Button Content="適用" Width="80" Margin="0,0,10,0" />
-            <Button Content="OK" Width="80" Margin="0,0,10,0" />
+            <Button Content="OK" Click="OkButton_Click" Width="80" Margin="0,0,10,0" />
             <Button Content="閉じる" Width="80" />
         </StackPanel>
     </Grid>
