--- a/Tri-Wpf/Views/SpacingEdit.xaml
+++ b/Tri-Wpf/Views/SpacingEdit.xaml
@@ -4,17 +4,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:Tri_Wpf"
+        xmlns:vm="clr-namespace:Tri_Wpf.ViewModels"
         xmlns:system="clr-namespace:System;assembly=System.Runtime"
         mc:Ignorable="d"
         Title="杭の間隔編集"
         Height="220"
-        Width="300">
+        Width="300"
+        d:DataContext="{d:DesignInstance vm:SpacingVm, IsDesignTimeCreatable=True}">
     <Grid Margin="9">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
         <DataGrid x:Name="SpacingGrid"
+                  ItemsSource="{Binding Spacings}"
                   AutoGenerateColumns="False"
                   HeadersVisibility="Column"
                   CanUserAddRows="False"
@@ -69,7 +72,7 @@
             <!-- Left-aligned content -->
             <StackPanel Orientation="Horizontal" DockPanel.Dock="Left">
                 <TextBlock Text="合計 (mm)：" Margin="0,0,10,0" />
-                <TextBlock x:Name="TotalText" Text="6000" />
+                <TextBlock Text="{Binding DisplayTotal}" />
             </StackPanel>
 
             <!-- Right-aligned buttons -->
