--- a/Tri-Wpf/Views/MainWindow.xaml
+++ b/Tri-Wpf/Views/MainWindow.xaml
@@ -106,7 +106,9 @@
                         </StackPanel>
                         <!-- <TextBlock Text="SL (mm)：" Grid.Row="4" Grid.Column="0" Margin="5" VerticalAlignment="Center" /> -->
                         <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal" Margin="5">
-                            <ComboBox Width="130" Height="22">
+                            <ComboBox Width="130" Height="22"
+                                      IsEnabled="{Binding HasTopPlate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                      >
                                 <ComboBoxItem IsSelected="True">
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock>PL-400×16×400</TextBlock>
@@ -114,7 +116,7 @@
                                 </ComboBoxItem>
                                 <ComboBoxItem>
                                     <StackPanel Orientation="Horizontal">
-                                        <TextBlock>PL-400×16×400</TextBlock>
+                                        <TextBlock>PL-400×16×40</TextBlock>
                                     </StackPanel>
                                 </ComboBoxItem>
                             </ComboBox>
