--- a/Tri-Wpf/Views/MainWindow.xaml
+++ b/Tri-Wpf/Views/MainWindow.xaml
@@ -45,6 +45,53 @@
 
             <!-- Tab Control -->
             <TabControl Grid.Row="1" Margin="0,9,0,-2">
+                <TabItem Header="受桁" Width="60" Margin="-4 0 0 0">
+                    <DockPanel Margin="10">
+                        <!-- Left section -->
+                        <StackPanel DockPanel.Dock="Left" Width="*" Margin="0,0,20,0">
+                            <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
+                                <TextBlock Text="左受衔サイズ：" VerticalAlignment="Center" Margin="0,0,10,0" Width="70px" />
+                                <TextBox Text="-200×80×7.5×11" Width="120" />
+                            </StackPanel>
+
+                            <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
+                                <TextBlock Text="左受衔サイズ：" VerticalAlignment="Center" Margin="0,0,10,0" Width="70px" />
+                                <TextBox Text="-200×80×7.5×11" Width="120" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
+                                <TextBlock Text="G_HL (mm)：" Margin="0,0,0,5" Width="70px" />
+                                <TextBox Text="500" Margin="0,0,0,10" Width="120" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
+                                <TextBlock Text="G_HTL (mm)：" Margin="0,0,0,5" Width="70px" />
+                                <TextBox Text="0" Margin="0,0,0,10" Width="120" />
+                            </StackPanel>
+                        </StackPanel>
+
+                        <!-- Right section -->
+                        <StackPanel DockPanel.Dock="Right" Width="100" Margin="20,0,0,0">
+                            <TextBlock Text="右受衔サイズ：" Margin="0,0,0,5" />
+                            <TextBox Text="-200×80×7.5×11" Margin="0,0,0,10" />
+
+                            <TextBlock Text="G_HR (mm)：" Margin="0,0,0,5" />
+                            <TextBox Text="500" Margin="0,0,0,10" />
+
+                            <TextBlock Text="G_HTR (mm)：" Margin="0,0,0,5" />
+                            <TextBox Text="0" Margin="0,0,0,10" />
+                        </StackPanel>
+
+                        <!-- Center section -->
+                        <StackPanel DockPanel.Dock="Top" HorizontalAlignment="Center">
+                            <TextBlock Text="数量：" Margin="0,0,0,5" />
+                            <TextBox Text="1" Width="60" HorizontalAlignment="Center" Margin="0,0,0,10" />
+
+                            <TextBlock Text="数量：" Margin="0,0,0,5" />
+                            <TextBox Text="2" Width="60" HorizontalAlignment="Center" Margin="0,0,0,20" />
+
+                            <Button Content="ボルト設定" Width="100" HorizontalAlignment="Center" />
+                        </StackPanel>
+                    </DockPanel>
+                </TabItem>
                 <TabItem Header="杭" Width="45" Margin="-4 0 0 0">
                     <Grid Margin="5">
                         <Grid.RowDefinitions>
@@ -82,18 +129,21 @@
 
                         <TextBlock Text="SL (mm)：" Grid.Row="1" Grid.Column="0" Margin="5" VerticalAlignment="Center" />
                         <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" Margin="5">
-                            <TextBox Width="130" Margin="0,0,10,0" Height="22" />
+                            <TextBox Text="{Binding SL, UpdateSourceTrigger=PropertyChanged}" Width="130"
+                                     Margin="0,0,10,0" Height="22" />
                         </StackPanel>
 
                         <TextBlock Text="SF (mm)：" Grid.Row="2" Grid.Column="0" Margin="5" VerticalAlignment="Center" />
                         <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" Margin="5">
-                            <TextBox Width="130" Margin="0,0,10,0" Height="22" />
+                            <TextBox Text="{Binding SF, UpdateSourceTrigger=PropertyChanged}" Width="130"
+                                     Margin="0,0,10,0" Height="22" />
                         </StackPanel>
 
                         <!-- Pile Count -->
                         <TextBlock Text="杭本数：" Grid.Row="3" Grid.Column="0" Margin="5" VerticalAlignment="Center" />
                         <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" Margin="5">
-                            <TextBox Text="{Binding NumberOfPiles, Mode=TwoWay}" Width="130" Margin="0,0,10,0" Height="22" />
+                            <TextBox Text="{Binding NumberOfPiles, Mode=TwoWay}" Width="130" Margin="0,0,10,0"
+                                     Height="22" />
                             <Button Content="編集"
                                     Command="{Binding EditSpacingCommand}"
                                     Margin="5 0 0 0"
@@ -141,12 +191,9 @@
                                 </ComboBoxItem>
                             </ComboBox>
                         </StackPanel>
-
                     </Grid>
                 </TabItem>
-                <TabItem Header="受桁" Width="60" Margin="-4 0 0 0">
-                    <TextBlock Text="受桁内容" Margin="10" />
-                </TabItem>
+
                 <TabItem Header="ブレス/継ぎ材" Width="95" Margin="-4 0 0 0">
                     <TextBlock Text="ブレス/継ぎ材内容" Margin="10" />
                 </TabItem>
@@ -177,7 +224,8 @@
                     HorizontalAlignment="Right"
                     VerticalAlignment="Bottom"
                     Margin="0,10,10,10">
-            <Button Content="適用" Width="80" Margin="0,0,10,0" />
+            <Button Content="適用" Width="80" Margin="0,0,10,0"
+                    Command="{Binding SaveToJsonCommand}" />
             <Button Content="OK" Click="OkButton_Click" Width="80" Margin="0,0,10,0" />
             <Button Content="閉じる" Width="80" />
         </StackPanel>
